[gd_scene load_steps=3 format=3 uid="uid://c6xywh2icv6a"]

[ext_resource type="Script" path="res://Scripts/level_up_menu.gd" id="1_jlasa"]
[ext_resource type="Script" path="res://Data/SelectionData.gd" id="2_ch84r"]

[node name="Level Up Menu" type="Control" node_paths=PackedStringArray("level_up_tree")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlasa")
level_up_tree = NodePath("LevelUpTree")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 448.0
offset_bottom = 256.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2
text = "Choose your power up ! "
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Choice1" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Amélioration 1

"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Choice1"]
layout_mode = 0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 53.0
text = "Subtitle"

[node name="Choice2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Amélioration 1

"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Choice2"]
layout_mode = 0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 53.0
text = "Subtitle"

[node name="Choice3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Amélioration 1

"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Choice3"]
layout_mode = 0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 53.0
text = "Subtitle"

[node name="LevelUpTree" type="Node" parent="."]
script = ExtResource("2_ch84r")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Choice1" to="." method="_on_choice_1_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Choice3" to="." method="_on_choice_3_pressed"]
